--- a/Check-in Me/Base.lproj/Main.storyboard
+++ b/Check-in Me/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -137,11 +137,11 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GxD-sx-cpN" id="Dr5-4j-fdU">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ufH-hv-kbY">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -194,6 +194,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M7x-sH-y1U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3500" y="1136"/>
+        </scene>
+        <!--SettingVC-->
+        <scene sceneID="WG6-bD-3ck">
+            <objects>
+                <viewController storyboardIdentifier="SettingVC" id="tey-dp-0uS" customClass="SettingVC" customModule="Check_in_Me" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RFD-kM-oMy"/>
+                        <viewControllerLayoutGuide type="bottom" id="IbM-ZU-Mcx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fag-ME-x6e">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" translatesAutoresizingMaskIntoConstraints="NO" id="L9N-cQ-CSR">
+                                <rect key="frame" x="119" y="113" width="124" height="124"/>
+                            </imageView>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableCell" translatesAutoresizingMaskIntoConstraints="NO" id="LL5-0p-cmC">
+                                <rect key="frame" x="102" y="245" width="171" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LL5-0p-cmC" id="4sF-B8-Bf3">
+                                    <rect key="frame" x="0.0" y="0.0" width="171" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="L9N-cQ-CSR" firstAttribute="leading" secondItem="fag-ME-x6e" secondAttribute="leadingMargin" constant="103" id="6gc-Wn-RR7"/>
+                            <constraint firstItem="IbM-ZU-Mcx" firstAttribute="top" secondItem="L9N-cQ-CSR" secondAttribute="bottom" constant="430" id="Wsu-Qh-QOp"/>
+                            <constraint firstItem="L9N-cQ-CSR" firstAttribute="top" secondItem="RFD-kM-oMy" secondAttribute="bottom" constant="49" id="dgF-4F-ixz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="L9N-cQ-CSR" secondAttribute="trailing" constant="116" id="mX0-1q-sHa"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="iQe-jZ-vnQ"/>
+                    <connections>
+                        <outlet property="personName" destination="LL5-0p-cmC" id="Mtd-Z0-QHx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t5H-Mc-Soj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4444" y="1796.8515742128936"/>
         </scene>
         <!--ManagerVC-->
         <scene sceneID="wg7-f3-ORb">
@@ -259,7 +300,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KJf-e8-vZa" id="jgu-qm-YgX">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -348,11 +389,30 @@
             </objects>
             <point key="canvasLocation" x="2607" y="1136"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rYj-AX-mCq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vUZ-tJ-Rsg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Aar-HO-XeC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tey-dp-0uS" kind="relationship" relationship="rootViewController" id="42V-gY-rCb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dl2-Th-E7V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3504.8000000000002" y="1796.8515742128936"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Map Marker Filled-20" width="20" height="20"/>
         <image name="Map Marker-20" width="20" height="20"/>
         <image name="Speech Bubble Filled-20" width="20" height="20"/>
         <image name="Speech Bubble-20" width="20" height="20"/>
+        <image name="person" width="64" height="64"/>
     </resources>
 </document>
